--- a/hot-play/src/SignUpPage/SignUp.css
+++ b/hot-play/src/SignUpPage/SignUp.css
@@ -2,11 +2,18 @@
 	
 	border-radius: 5px;
     background-color: #f2f2f2;
-    padding: 10px;
+	padding: 10px;
 	text-align: center;
 	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+	
 
 } 
+
+
+.title-signUp {
+	height: 55px;
+	background-color: #f2f2f2;
+  }
 
 .signUp-box{
 	width: 50%;
@@ -16,6 +23,8 @@
 	text-align: center;
 	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 	
+	
+	
 }
 
 .signUp-form{
@@ -24,30 +33,34 @@
 	border-radius: 5px;
 	text-align: center;
 	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-	
-	
-
 
 }
 
+table{
+	margin: auto;
+}
+
 input[type=email] {
-	width: 30%;
+	width: 100%;
 	padding: 12px;
 	border: 1px solid #ccc;
-	margin-top: 6px;
-	margin-bottom: 20px;
+	 margin-top: 6px;
+	margin-bottom: 10px; 
+	border-radius: 0.5rem;
 
   }
 input[type=password] {
-	width: 30%;
+	width: 100%;
 	padding: 12px;
 	border: 1px solid #ccc;
 	margin-top: 6px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
+	border-radius: 0.5rem;
+
 	
   }
 
-  input[type=submit]:hover {
+input[type=submit]:hover {
 	background-color: #abb1ab;
 	padding: 12px 20px;
 	border-radius: 10px;
