--- a/hot-play/src/LoginPage/L1.css
+++ b/hot-play/src/LoginPage/L1.css
@@ -71,6 +71,7 @@ input[type=submit]:hover {
 
   table{
 	margin: auto;
+
 }
 
 
@@ -121,7 +122,7 @@ input[type=submit]:hover {
 	line-height: 34px;
 	white-space: nowrap;
 	border-radius: 0.2em;
-	font-size: 16px;
+	font-size: 16px ;
 	color: #FFF;
   }
   .loginBtn:before {
@@ -147,10 +148,12 @@ input[type=submit]:hover {
 	background-image: linear-gradient(#4C69BA, #3B55A0);
 	/*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
 	text-shadow: 0 -1px 0 #354C8C;
+	
   }
   .loginBtn--facebook:before {
 	border-right: #364e92 1px solid;
 	background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png') 6px 6px no-repeat;
+	
   }
   .loginBtn--facebook:hover,
   .loginBtn--facebook:focus {
@@ -192,7 +195,6 @@ input[type=submit]:hover {
 
 .forgot-password{
 	float: left;
-	margin-left: 12.25%;
-	position: relative;
-	
+	margin-left: 50%;
+	width: max-content;
 }
