--- a/hot-play/src/SignUpPage/SignUp.css
+++ b/hot-play/src/SignUpPage/SignUp.css
@@ -1,7 +1,7 @@
 .title-signUp{
 	
 	border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: rgb(34, 2, 48);
 	padding: 10px;
 	text-align: center;
 	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
