--- a/hot-play/src/index.css
+++ b/hot-play/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(182, 187, 183);
+  background-color: 	rgb(45, 3, 63);
+  ;
 }
 
 code {
