--- a/hot-play/src/LoginPage/L1.css
+++ b/hot-play/src/LoginPage/L1.css
@@ -53,7 +53,7 @@ input[type=password] {
 }
 
 input[type=submit] {
-		background-color: #2b2d2c;
+		background-color:  rgb(34, 2, 48);
 		color: white;
 		padding: 12px 20px;
 		border: none;
@@ -61,8 +61,9 @@ input[type=submit] {
 		border-radius: 10px;
 	  }
 
+
 input[type=submit]:hover {
-	background-color: #abb1ab;
+	background-color: rgb(34, 2, 48);
 	padding: 12px 20px;
 	border-radius: 10px;
 	border: solid blanchedalmond;
@@ -170,7 +171,7 @@ input[type=submit]:hover {
 }
 
 .signUp-button-From-signIn{
-	background-color: #2b2d2c;
+	background-color: rgb(34, 2, 48);
 		color: white;
 		padding: 12px 20px;
 		border: none;
