--- a/hot-play/src/NavBar/Navbar.css
+++ b/hot-play/src/NavBar/Navbar.css
@@ -21,28 +21,41 @@
 }
 .search-div{
 	display: flex;
+	flex-direction: row;
 	height: 50px;
 	width: 100px;
 	margin-top: 10px;
-	position:absolute;
-	right: 15%;
+
+	margin-right: 15%;
 	justify-content:center ;
 }
+
+
 .search{
 	font-size: 18px;
 	padding: 2px; 
 	height: 30px;
 	width: 300px;
 	border-radius: 5px;
-	display: inline-block	;
-}
-.search-button{
-	height: 50px;
-	width:50px;
+	
+	}
+.searchbutton{
+	display: inline-flex;
 	position: fixed;
-	right:7.5%;
+		
+}
+
+.search-button{
+	margin-top: 2px;
+	height: 34.5px;
+	width:40px;
 	background-color: transparent;
+	border-radius: 2px;
+	position: absolute;
+	right: 2.5%;
 	border: none;
+	
+
 
 }
 .search-button svg{
@@ -54,7 +67,8 @@
 }
 .user-profile{
 	position: fixed;
-	right:1%
+	margin-left:25%;
+	
 }
 .navigate{
 	background-color:  rgb(69, 3, 97) ;
