--- a/hot-play/src/LoginPage/L1.css
+++ b/hot-play/src/LoginPage/L1.css
@@ -55,22 +55,21 @@ input[type=password] {
 	background-color:  rgb(68, 29, 84);
 }
 
-input[type=submit] {
-		background-color: rgb(68, 29, 84);
-		color: white;
-		padding: 12px 20px;
-		border: none;
-		width:"20%";
-		font-size:16px;
-		transition: 0.2s;
-	  }
 
-input[type=submit]:hover {
-	background-color: rgb(184, 82, 224);
+.login_btn{
+	background-color:rgb(66, 22, 83);
+	color: white;
 	padding: 12px 20px;
-	border-radius: 0.1px;
+	border: none;
+	font-size:16px;
+	transition: 0.2s;
+} 
+.login_btn:hover{
+	background-color: rgb(95, 40, 117);
+	padding: 12px 20px;
+	font-size: 14px;
 	
-  }
+}
 
   table{
 	margin: auto;
@@ -178,16 +177,17 @@ input[type=submit]:hover {
 		padding: 12px 20px;
 		border: none;
 		cursor: pointer;
-		border-radius: 10px;
 		font-size: 15px;
+		transition: 0.3s;
+		border-radius: 10px;
 		
 }
 .signUp-button-From-signIn:hover{
-	background-color: #abb1ab;
+	background-color: rgb(104, 40, 130);
 	padding: 12px 20px;
+	border:none;
 	border-radius: 10px;
-	border: solid blanchedalmond;
-	font-size: 10px;
+	font-size: 13px;
 }
 
 .signUp-From-signIn
