--- a/hot-play/src/NavBar/Navbar.css
+++ b/hot-play/src/NavBar/Navbar.css
@@ -6,6 +6,7 @@
 	column-gap: 25px;
 	justify-content:space-between;	
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	z-index: 14;
 }
 .h1{
 	color: aliceblue;
@@ -17,6 +18,7 @@
 	width: 100%;
 	height: 30px;
 	top: 0px;
+	z-index: 14;
 	
 }
 .search-div{
