--- a/hot-play/src/VideoComponent/video.css
+++ b/hot-play/src/VideoComponent/video.css
@@ -87,6 +87,9 @@
 .ss_image{
 	border-radius: 8.5px;
 	transition: 0.5s ease ;
+	max-width: 250px;
+	max-width: 250px;
+	
 
 }
 .ss_image:hover{
@@ -105,7 +108,7 @@
     
     transform: scale(1.02);
     transition: 0.3s ease-in-out;
-	z-index: -1;
+	z-index: -2;
 	
 }
 
@@ -116,4 +119,11 @@
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	margin-top: 140px;
 
+}
+
+.image{
+	object-fit: contain;
+	max-width: 100%;
+	height:113px;
+	
 }
