--- a/hot-play/src/VideoDescriptionPage/v.css
+++ b/hot-play/src/VideoDescriptionPage/v.css
@@ -12,8 +12,8 @@
 	color: white;
 	margin-top: 150px;
 	margin-left:50px;
-	font-size: 45px;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: 25px;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	margin-bottom: 20px;
 	
 }
@@ -40,5 +40,66 @@
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.Episodes{
+	margin-left: 50px; 
+}
 
+.ep_selection{
+	margin-top: 20px;
+	width: 120px;
+	height: 40px;
+}
+.select{
+	width: 100%;
+	height: 100%;
+	font-size: 18px;
+	background-color:rgb(172, 14, 240);
+	border-radius: 2.5px;
+}
+
+.option{
+	font-size: 18px;
+	border: 1px solid white;
+	border-radius: 0px;
+}
+
+.link1{
+	color: white;
+	text-decoration: none;
+	font-size: 18px;
+}
+
+.Epi{
+	display: flex;
+	flex-direction: column;
+}
+
+.episode_desc{
+	background-color:  rgb(70, 13, 94);
+	border-radius: 2px;
+	max-width: 80%;
+	padding-bottom: 20px;
+
+}
+
+.epi_button
+{
+	background-color:  rgb(70, 13, 94);
+	color: rgb(244, 233, 233);
+	padding: 12px 20px;
+	font-size: 18px;
+	border: none;
+	cursor: pointer;
+	border-radius: 10px;
+	transition: 0.3s;
+}
+.epi_button:hover{
+	background-color:rgb(104, 40, 130);
+	padding: 12px 20px;
+	border-radius: 10px;
+	font-size: 16px;
+}
+.ep_more_info{
+	margin-left: 20px;
 	
+}
